# leetcode-self

./: .gitignore
add_spaces/src/: main.rs
binary_search/src/: main.rs
brute-force-contiguous/: Cargo.toml
brute-force-contiguous/src/: main.rs
design_worddictionary/: Cargo.toml
design_worddictionary/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: main  main.rs
java/MaximumSubarray/: Solution.java
java/StaticArrays/: StaticArray.java
java/can_make_subsequence/: Solution.java
java/design-browser-history-2stack/: Solution.java
java/design-browser-history-doubly-linked-list/: Solution.java
java/design_worddictionary/: Solution.java
java/evalute_prn/: Solution.java
java/reverse-linked-list/: ListNode.java  README.md  Solution.java  SolutionTest.java
java/top-k-frequent-elements/: Solution.java
java/trie/: Solution.java
java/valid_parentheses/: Solution.java
kadane-algo/: Cargo.toml
kadane-algo/src/: main.rs
ocaml/functions/: dune-project
ocaml/labelled_func/: dune-project  labelled_func.opam
ocaml/labelled_func/lib/: dune
ocaml/labelled_func/test/: dune
ocaml/leap_year/: dune-project
ownership/src/: main.rs
ownership_hashset_hashmap/src/: main.rs
ownership_notes/: Cargo.toml
ownership_notes/src/: main.rs
remove_element/src/: main.rs
reverse_linked_list/: Cargo.toml
reverse_linked_list/src/: main.rs
ruby/read_input/: read_input.rb
ruby/static_arrays/: static_array.rb
structs_playground/: Cargo.toml
structs_playground/src/: main.rs
trie_struct/: Cargo.toml
(+17 files in other folders)
