(lang dune 3.17)

(name labelled_func)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name labelled_func)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  (ocaml (>= 4.14.0))
  dune
  ; how a comment looks like in dune-project
  zarith
 )

 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
